--- a/equipos/equipos.css
+++ b/equipos/equipos.css
@@ -1,3 +1,15 @@
-h1{
-    color: darkgreen; 
+.contenedor {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.contenedor>div {
+    width: 250px;
+    height: 365px;
+    margin: 10px;
+    background-color: cornsilk;
+    padding-top: 5px;
+    text-align: center;
+    font-size: 15px;
+    border-radius: 5px;
 }
