--- a/planes/planes.css
+++ b/planes/planes.css
@@ -1,17 +1,20 @@
-h1{
-    color: darkgreen; 
+h1 {
+  color: darkgreen;
 }
+
 .planes-contenido {
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .planes-contenido > div {
-    background-color: greenyellow;
-    width: 380px;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    text-align: center;
-    font-size: 1em;
-  }
+  display: flex;
+  justify-content: space-around;
+}
+
+.planes-contenido>div {
+  background-color: greenyellow;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 1em;
+}
+
+.width50{
+  width: 50%;
+}
