--- a/quienes-somos/quienes-somos.css
+++ b/quienes-somos/quienes-somos.css
@@ -1,3 +1,21 @@
 h1{
     color: darkgreen; 
 }
+
+h2{
+    color: darkgreen; 
+}
+
+body {
+    display: flex;
+    justify-content: space-around;
+}
+
+.quienes-somos{
+    margin: 20px;
+    padding: 30px;;
+    background-color: #dcfbdc;
+    width: 80%;
+    height: 80%;
+    border-radius: 10px;
+}
