--- a/cotizacion/cotizacion.css
+++ b/cotizacion/cotizacion.css
@@ -1,3 +1,17 @@
 h1{
     color: darkgreen; 
 }
+
+body {
+    display: flex;
+    justify-content: space-around;
+}
+
+.cotizacion{
+    margin: 20px;
+    padding: 30px;;
+    background-color: #dcfbdc;
+    width: 80%;
+    height: 80%;
+    border-radius: 10px;
+}
