--- a/equipos/equipos.css
+++ b/equipos/equipos.css
@@ -1,3 +1,7 @@
+h1{
+    color: darkgreen; 
+}
+
 .contenedor {
     display: flex;
     flex-wrap: wrap;
@@ -7,7 +11,7 @@
     width: 250px;
     height: 365px;
     margin: 10px;
-    background-color: cornsilk;
+    background-color: #dcfbdc;
     padding-top: 5px;
     text-align: center;
     font-size: 15px;
