--- a/servicio-al-cliente/servicio-al-cliente.css
+++ b/servicio-al-cliente/servicio-al-cliente.css
@@ -1,3 +1,15 @@
 h1{
     color: darkgreen; 
 }
+body {
+    display: flex;
+    justify-content: space-around;
+}
+.servicio-al-cliente{
+    margin: 20px;
+    padding: 30px;;
+    background-color: #dcfbdc;
+    width: 80%;
+    height: 80%;
+    border-radius: 10px;
+}
